samples/_failures_safe/1761621866_5044db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7eb03d7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f7eb03d7.c:174:12: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  174 |     return lex
      |            ^~~
      |            lexer
./samples/SAFE/__tmp_f7eb03d7.c:174:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f7eb03d7.c:174:15: error: expected ‘;’ at end of input
  174 |     return lex
      |               ^
      |               ;
./samples/SAFE/__tmp_f7eb03d7.c:174:5: error: expected declaration or statement at end of input
  174 |     return lex
      |     ^~~~~~
